force-app/main/default/objects/clofor_com_cfs__VATPayReq__c/fields/clofor_com_cfs__AmountSellingInclTaxFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountSellingInclTaxFormu__c</fullName>
    <formula>clofor_com_cfs__VATInvoiceID__r.clofor_com_cfs__AmountVATSellingIncludeVAT__c</formula>
    <label>AMOUNT SELLING INCL TAX-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>