force-app/main/default/objects/clofor_com_cfs__VATPayReq__c/fields/clofor_com_cfs__AmountSellingInclTaxTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountSellingInclTaxTrxPlan__c</fullName>
    <label>AMOUNT SELLING INCL TAX-TRX PLAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>